# agent-tools

./: .gitattributes  .gitignore  Cargo.toml  DevelopWithGo.md  README.md  agent-tools-patterns.md  build.bat  build.sh  install-macos.sh  install.ps1  install.sh
.agent/api/: agent-tools.yaml
.github/workflows/: ci.yml  release.yml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: cmd_comms.rs  cmd_docs.rs  cmd_docs_artifacts.rs  cmd_gateway_context.rs  cmd_hook.rs  cmd_patterns.rs  cmd_read.rs  cmd_setup_hooks.rs  cmd_setup_menu.rs  cmd_setup_perms.rs  cmd_setup_rules.rs  cmd_setup_skill.rs  cmd_tasks.rs  cmd_text.rs  codex_hooks_toml.rs  main.rs  memory_reminder.rs  nudge.rs  settings_json.rs  updater.rs
crates/agent-cli/tests/: grep_sed_conformance.rs
crates/agent-cli/tests/fixtures/grep_sed/.hidden_dir/: secret.txt
crates/agent-cli/tests/fixtures/grep_sed/basic/: alpha.txt  beta.txt
crates/agent-cli/tests/fixtures/grep_sed/ignored/: ignored.txt  kept.txt
crates/agent-cli/tests/fixtures/grep_sed/payloads/: literals.txt  multiline.txt  pattern-with-newline.txt  replacement-with-newline.txt
crates/agent-cli/tests/fixtures/grep_sed/platform/: crlf.txt  utf8-bom.txt
crates/agent-comms/: Cargo.toml
crates/agent-comms/src/: config.rs  docs.rs  gateway.rs  hooks.rs  identity.rs  lib.rs  patterns.rs  sanitize.rs  tasks.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: error.rs  lib.rs  output.rs  storage.rs
crates/agent-fs/: Cargo.toml
crates/agent-fs/src/: lib.rs  markdown.rs  text_ops.rs
crates/agent-mcp/: Cargo.toml
crates/agent-mcp/src/: main.rs  protocol.rs  server.rs  tools.rs  updater.rs
crates/agent-search/: Cargo.toml
crates/agent-search/src/: cache.rs  indexer.rs  lib.rs  query.rs
crates/agent-symbols/: Cargo.toml
crates/agent-symbols/src/: index.rs  languages.rs
crates/agent-sync/: Cargo.toml  build.rs
crates/agent-sync/src/: main.rs
crates/agent-updater/: Cargo.toml
crates/agent-updater/src/: lib.rs
crates/claude-cli/: Cargo.toml
crates/claude-cli/src/: main.rs
crates/claude-core/: Cargo.toml
crates/claude-core/src/: lib.rs  path.rs
crates/claude-fs/: Cargo.toml
crates/claude-fs/src/: lib.rs  list.rs  ops.rs  tree.rs
crates/claude-mcp/: Cargo.toml
crates/claude-mcp/src/: main.rs  protocol.rs  tools.rs  updater.rs
crates/claude-search/: Cargo.toml
crates/claude-search/src/: cache.rs  indexer.rs  query.rs
crates/claude-symbols/: Cargo.toml
crates/claude-symbols/src/: extractor.rs  index.rs  languages.rs  lib.rs  parser.rs
docs/: Grep_Sed.md  grep-sed-conformance.md  grep-sed-contract.md  grep-sed-t008-bulk-workflows-decision.md  grep-sed.md
docs/Grep_Sed_spec/: manifest.yaml
docs/Grep_Sed_spec/backend/: T003-shared-text-layer.md  T004-output-exit-renderer.md  T005-grep-command.md  T006-sed-preview.md  T006a-run-text-command-wrapper.md  T006b-resolve-text-payload-file.md  T006c-sed-operation-and-fallback-errors.md  T007-sed-write.md  T007a-dry-consolidation.md  T008-bulk-workflows.md  T011-unify-warning-labels.md  T013-shared-text-command-engine.md  T015-generalize-cmd-text-engine.md
docs/Grep_Sed_spec/docs/: T001-shared-command-contract.md  T009-user-docs.md
docs/Grep_Sed_spec/qa/: T002-conformance-matrix.md  T010-conformance-audit-consolidation.md  T012-conformance-status-source-of-truth.md  T014-cross-command-conformance.md  T014a-consolidate-validation-warning-tests.md
