[workspace]
members = [
    "crates/claude-core",
    "crates/claude-fs",
    "crates/claude-symbols",
    "crates/claude-search",
    "crates/claude-cli",
    "crates/claude-mcp",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
walkdir = "2"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
blake3 = "1"
tree-sitter = "0.24"

[profile.release]
lto = true
strip = true
