[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-tools"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-fs = { path = "../agent-fs" }
agent-symbols = { path = "../agent-symbols" }
agent-search = { path = "../agent-search" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }

[target.'cfg(unix)'.dependencies]
flate2 = { workspace = true }
tar = { workspace = true }

[target.'cfg(windows)'.dependencies]
zip = { workspace = true }
