[package]
name = "claude-search"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-core = { path = "../claude-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = "3"
